# sdk-nrf

samples/bluetooth/shell_bt_nus/: CMakeLists.txt  prj.conf
samples/bluetooth/shell_bt_nus/src/: idle_time.h  main.c
samples/bluetooth/shell_bt_nus/src/ad5254/: ad5254.c  ad5254.h  ad5254_devicetree.dts  kconfig  test_ad5254.c
samples/bluetooth/shell_bt_nus/src/child_image/: prj.conf
